# apps/express-modular-architecture/src/modules/authentication/validator/auth.validator.js
@@ -1,3 +1,19 @@
+exports.loginValidator = async (req, res, next) => {
+    const { email, password } = req.body;
+
+    if (!email) return next(new Error('email is required 😢'));
+
+    if (!/^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$/gi.test(email)) {
+        return next(new Error('You must use valid email 😢'));
+    }
+    if (!password) return next(new Error('password is required 😢'));
+
+    if (password.length < 6) {
+        return next(new Error('Password must be at least 6 character 😢'));
+    }
+    next();
+};
+
 exports.registerValidator = async (req, res, next) => {
     const { name, username, phone, email, password, confirmPassword } = req.body;
     if (!name) return next(new Error('Name is required'));
@@ -13,23 +29,6 @@ exports.registerValidator = async (req, res, next) => {
 
     if (password.length < 6) {
         return next(new Error('Password must be at least 6 character'));
-    }
-    // if (password !== confirmPassword) return next(new Error('password doesn\'t match'));
-    next();
-};
-
-exports.loginValidator = async (req, res, next) => {
-    const { email, password, confirmPassword } = req.body;
-
-    if (!email) return next(new Error('email is required 😢'));
-
-    if (!/^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$/gi.test(email)) {
-        return next(new Error('You must use valid email 😢'));
-    }
-    if (!password) return next(new Error('password is required 😢'));
-
-    if (password.length < 6) {
-        return next(new Error('Password must be at least 6 character 😢'));
     }
     // if (password !== confirmPassword) return next(new Error('password doesn\'t match'));
     next();
